plugins {
	id 'org.springframework.boot' version '2.4.2'
	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
	id 'java'
	id 'application'
}

group = 'ml.zihbot'
version = '0.0.1'
sourceCompatibility = '11'

mainClassName = 'ml.zihbot.housing_monitor.Application'



repositories {
	mavenCentral()
}

dependencies {
  	compileOnly 'org.projectlombok:lombok:1.18.8'
	annotationProcessor 'org.projectlombok:lombok:1.18.8'
	compile 'org.springframework.boot:spring-boot-starter-webflux:2.4.2'

	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '2.4.3'
	runtimeOnly 'mysql:mysql-connector-java'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

test {
	useJUnitPlatform()
}